# NVPLSamples

./: LICENSE  README.md
nvpl_blas/: CMakeLists.txt  CMakePresets.json  README.md
nvpl_blas/c/: CMakeLists.txt  caxpby.c  caxpy.c  ccopy.c  cdotc.c  cdotu.c  cgbmv.c  cgemm.c  cgemm_batch.c  cgemm_batch_strided.c  cgemmt.c  cgemv.c  cgerc.c  cgeru.c  chbmv.c  chemm.c  chemv.c  cher.c  cher2.c  cher2k.c  cherk.c  chpmv.c  chpr.c  chpr2.c  cscal.c  csscal.c  cswap.c  csymm.c  csyr2k.c  csyrk.c  ctbmv.c  ctbsv.c  ctpmv.c  ctpsv.c  ctrmm.c  ctrmv.c  ctrsm.c  ctrsv.c  dasum.c  daxpby.c  (+122 more)
nvpl_blas/f77/: CMakeLists.txt  caxpby.f  caxpy.f  ccopy.f  cdotc.f  cdotu.f  cgbmv.f  cgemm.f  cgemm3m.f  cgemm_batch.f  cgemm_batch_strided.f  cgemmt.f  cgemv.f  cgerc.f  cgeru.f  chbmv.f  chemm.f  chemv.f  cher.f  cher2.f  cher2k.f  cherk.f  chpmv.f  chpr.f  chpr2.f  common_func.f  crotg.f  cscal.f  csrot.f  csscal.f  cswap.f  csymm.f  csyr2k.f  csyrk.f  ctbmv.f  ctbsv.f  ctpmv.f  ctpsv.f  ctrmm.f  ctrmv.f  (+131 more)
nvpl_fft/: CMakeLists.txt  CMakePresets.json  README.md
nvpl_fft/cxx/: 1d_c2c_double_example.cpp  1d_c2c_single_example.cpp  CMakeLists.txt  auxiliary_apis_example.cpp  c2c_c2r_r2c_many_bench_example.cpp  c2c_c2r_r2c_single_apis_example.cpp  c2c_double_many_example.cpp  c2c_many_bench_example.cpp  c2c_r2c_c2r_many_bench_example.cpp  c2c_single_many_example.cpp  c2c_single_withomp_example.cpp  common.h  include_header_example.cpp  plan_many_dft_benchmark_example.cpp  r2c_c2r_double_many_example.cpp  r2c_c2r_single_many_example.cpp  r2c_c2r_single_withomp_example.cpp  utils.h
nvpl_fft/fortran/: CMakeLists.txt  c2c_c2r_r2c_double_apis_example.f  c2c_c2r_r2c_double_apis_example.f90  c2c_c2r_r2c_single_apis_example.f90  rank_mismatch_test_example.f90
nvpl_lapack/: CMakeLists.txt  CMakePresets.json  README.md  ex_batched_getrf.cpp  ex_cgels.cpp  ex_dgels.cpp  ex_getrf_nopivot.f90  ex_lapacke_cgels_colmajor.cpp  ex_lapacke_cgels_rowmajor.cpp  ex_lapacke_cgesv_colmajor.cpp  ex_lapacke_cgesv_rowmajor.cpp  ex_lapacke_cheev_colmajor.cpp  ex_lapacke_cheev_rowmajor.cpp  ex_lapacke_cposv_colmajor.cpp  ex_lapacke_cposv_rowmajor.cpp  ex_lapacke_dgels_colmajor.cpp  ex_lapacke_dgels_rowmajor.cpp  ex_lapacke_dgesv_colmajor.cpp  ex_lapacke_dgesv_rowmajor.cpp  ex_lapacke_dposv_colmajor.cpp  ex_lapacke_dposv_rowmajor.cpp  ex_lapacke_dsyev_colmajor.cpp  ex_lapacke_dsyev_rowmajor.cpp  ex_lapacke_sgels_colmajor.cpp  ex_lapacke_sgels_rowmajor.cpp  ex_lapacke_sgesv_colmajor.cpp  ex_lapacke_sgesv_rowmajor.cpp  ex_lapacke_sposv_colmajor.cpp  ex_lapacke_sposv_rowmajor.cpp  ex_lapacke_ssyev_colmajor.cpp  ex_lapacke_ssyev_rowmajor.cpp  ex_lapacke_zgels_colmajor.cpp  ex_lapacke_zgels_rowmajor.cpp  ex_lapacke_zgesv_colmajor.cpp  ex_lapacke_zgesv_rowmajor.cpp  ex_lapacke_zheev_colmajor.cpp  ex_lapacke_zheev_rowmajor.cpp  ex_lapacke_zposv_colmajor.cpp  ex_lapacke_zposv_rowmajor.cpp  ex_potrf.f90  (+6 more)
nvpl_lapack/cpp/: CMakeLists.txt  ex_batched_getrf.cpp  ex_cgels.cpp  ex_cgesv.cpp  ex_cgetrf.cpp  ex_cheev.cpp  ex_cposv.cpp  ex_dgels.cpp  ex_dgesv.cpp  ex_dgetrf.cpp  ex_dposv.cpp  ex_dsyev.cpp  ex_lapacke_64.cpp  ex_lapacke_cgels_colmajor.cpp  ex_lapacke_cgetrf_colmajor.cpp  ex_lapacke_cgetrf_rowmajor.cpp  ex_lapacke_cheev_colmajor.cpp  ex_lapacke_compat.cpp  ex_lapacke_dgels_colmajor.cpp  ex_lapacke_dgesv_colmajor.cpp  ex_lapacke_dgetrf_colmajor.cpp  ex_lapacke_dgetrf_rowmajor.cpp  ex_lapacke_dposv_rowmajor.cpp  ex_lapacke_dsyev_rowmajor.cpp  ex_lapacke_sgels_colmajor.cpp  ex_lapacke_sgels_rowmajor.cpp  ex_lapacke_sgetrf_colmajor.cpp  ex_lapacke_sgetrf_rowmajor.cpp  ex_lapacke_sposv_rowmajor.cpp  ex_lapacke_ssyev_colmajor.cpp  ex_lapacke_zgels_rowmajor.cpp  ex_lapacke_zgesv_colmajor.cpp  ex_lapacke_zgesv_rowmajor.cpp  ex_lapacke_zgetrf_colmajor.cpp  ex_lapacke_zgetrf_rowmajor.cpp  ex_lapacke_zheev_colmajor.cpp  ex_lapacke_zheev_rowmajor.cpp  ex_lapacke_zposv_colmajor.cpp  ex_sgels.cpp  ex_sgesv.cpp  (+11 more)
nvpl_lapack/f77/: CMakeLists.txt  common_func.f  ex_cgels.f  ex_cgesv.f  ex_cgetrf.f  ex_cheev.f  ex_cposv.f  ex_dgels.f  ex_dgesv.f  ex_dgetrf.f  ex_dposv.f  ex_dsyev.f  ex_getrf_nopivot.f  ex_potrf.f  ex_sgels.f  ex_sgesv.f  ex_sgetrf.f  ex_sposv.f  ex_ssyev.f  ex_zgels.f  ex_zgesv.f  ex_zgetrf.f  ex_zheev.f  ex_zposv.f
nvpl_rand/: CMakeLists.txt  CMakePresets.json  README.md  common.hpp  rand_mt_generate_bits_compare_curand.cpp  rand_mt_generate_bits_compare_curand_sobol.cpp  rand_mt_generate_bits_compare_st.cpp  rand_mt_generate_bits_compare_threads.cpp  rand_mt_generate_normal_fp64.cpp  rand_st_distribution_config.cpp  verify_version.cpp
nvpl_scalapack/: CMakeLists.txt  CMakePresets.json  README.md
nvpl_scalapack/cxx/: CMakeLists.txt  nvpl_scalapack_command_line_parser.hpp  nvpl_scalapack_example_pdgemm.cpp  nvpl_scalapack_example_pdgesv.cpp
nvpl_scalapack/f77/: CMakeLists.txt  pcscaex.f  pdscaex.f  pdscaexinfo.f  psscaex.f  pzscaex.f
nvpl_sparse/: CMakeLists.txt  CMakePresets.json  README.md
nvpl_sparse/c/: CMakeLists.txt  example_helper.h  spmm_coo.c  spmm_csr.c  spmv_coo.c  spmv_csr.c  spmv_sell.c  spsv_coo.c  spsv_csr.c  spsv_sell.c
nvpl_tensor/: CMakeLists.txt  CMakePresets.json  README.md
nvpl_tensor/contraction/: CMakeLists.txt  README.md  contraction.c
nvpl_tensor/elementwise_binary/: CMakeLists.txt  README.md  elementwise_binary.c
nvpl_tensor/elementwise_trinary/: CMakeLists.txt  README.md  elementwise_trinary.c
nvpl_tensor/nvpl_tensor_version/: CMakeLists.txt  README.md  nvpl_tensor_version.c  nvpl_tensor_version.cxx
nvpl_tensor/permutation/: CMakeLists.txt  README.md  permutation.c
nvpl_tensor/reduction/: CMakeLists.txt  README.md  reduction.c
